# ubxtranslator

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
launch/: ubxtranslator.launch
msg/: hpposllh.msg  relpos2D.msg
nodes/: ubx_publisher
src/ubxtranslator/: core.py
src/ubxtranslator/config/: F9P.py  M8U.py
udev/: 99-serial.rules  README.md
