<?xml version="1.0"?>
<package format="2">
  <name>ubxtranslator</name>
  <version>0.1.1</version>
  <description>A lightweight python library for translating UBX packets</description>

  <maintainer email="JacobHartzer@gmail.com">Jacob Hartzer</maintainer>
  <author email='dalymople@gmail.com'>Dalymople</author>
  <license>GNU GPL v3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>   

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
